...

        if (shortcut.getExtra("gog_id").isNotEmpty()) {
            return "GOG"
        }

        if (shortcut.getExtra("app_id").toIntOrNull() != null) {
            return "STEAM"
        }

        return "CUSTOM"
    }

    @JvmStatic
    fun isCustomLibraryShortcut(shortcut: Shortcut): Boolean = inferGameSource(shortcut) == "CUSTOM"

    @JvmStatic
...
